more env testing

--- a/binder_test.ipynb
+++ b/binder_test.ipynb
@@ -2,12 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Linux'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.uname().sysname"
    ]
   },
   {
@@ -31,157 +51,71 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ruby: /usr/bin/ruby /usr/bin/ruby2.3 /usr/lib/ruby /usr/share/man/man1/ruby.1.gz\r\n"
+     ]
+    }
+   ],
    "source": [
-    "`os.environ.keys()` on Linux Mint 18.3 On Jupyter Notebook\n",
-    "\n",
-    "```\n",
-    "['XDG_VTNR',\n",
-    " 'SSH_AGENT_PID',\n",
-    " 'XDG_SESSION_ID',\n",
-    " 'XDG_GREETER_DATA_DIR',\n",
-    " 'QT_STYLE_OVERRIDE',\n",
-    " 'TERM',\n",
-    " 'SHELL',\n",
-    " 'VTE_VERSION',\n",
-    " 'CONDA_SHLVL',\n",
-    " 'QT_LINUX_ACCESSIBILITY_ALWAYS_ON',\n",
-    " 'CONDA_PROMPT_MODIFIER',\n",
-    " 'WINDOWID',\n",
-    " 'OLDPWD',\n",
-    " 'GTK_MODULES',\n",
-    " 'USER',\n",
-    " 'LS_COLORS',\n",
-    " 'QT_ACCESSIBILITY',\n",
-    " 'DESKTOP_AUTOSTART_ID',\n",
-    " 'XDG_SESSION_PATH',\n",
-    " 'XDG_SEAT_PATH',\n",
-    " 'SSH_AUTH_SOCK',\n",
-    " 'SESSION_MANAGER',\n",
-    " 'DEFAULTS_PATH',\n",
-    " 'XDG_CONFIG_DIRS',\n",
-    " 'PATH',\n",
-    " 'DESKTOP_SESSION',\n",
-    " 'QT_QPA_PLATFORMTHEME',\n",
-    " 'CONDA_PREFIX',\n",
-    " 'XDG_SESSION_TYPE',\n",
-    " 'PWD',\n",
-    " 'LANG',\n",
-    " 'GDM_LANG',\n",
-    " 'MANDATORY_PATH',\n",
-    " 'GDMSESSION',\n",
-    " 'XDG_SEAT',\n",
-    " 'HOME',\n",
-    " 'SHLVL',\n",
-    " 'LANGUAGE',\n",
-    " 'GNOME_DESKTOP_SESSION_ID',\n",
-    " 'GTK_OVERLAY_SCROLLING',\n",
-    " 'CONDA_PYTHON_EXE',\n",
-    " 'XDG_SESSION_DESKTOP',\n",
-    " 'LOGNAME',\n",
-    " 'XDG_DATA_DIRS',\n",
-    " 'DBUS_SESSION_BUS_ADDRESS',\n",
-    " 'CONDA_DEFAULT_ENV',\n",
-    " 'LESSOPEN',\n",
-    " 'XDG_RUNTIME_DIR',\n",
-    " 'DISPLAY',\n",
-    " 'XDG_CURRENT_DESKTOP',\n",
-    " 'LESSCLOSE',\n",
-    " 'XAUTHORITY',\n",
-    " '_',\n",
-    " 'JPY_PARENT_PID',\n",
-    " 'CLICOLOR',\n",
-    " 'PAGER',\n",
-    " 'GIT_PAGER',\n",
-    " 'MPLBACKEND']\n",
-    " ```"
+    "! whereis ruby"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "java: /usr/share/java\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! whereis java"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# globals()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['XDG_VTNR',\n",
-       " 'SSH_AGENT_PID',\n",
-       " 'XDG_SESSION_ID',\n",
-       " 'XDG_GREETER_DATA_DIR',\n",
-       " 'QT_STYLE_OVERRIDE',\n",
-       " 'TERM',\n",
-       " 'SHELL',\n",
-       " 'VTE_VERSION',\n",
-       " 'CONDA_SHLVL',\n",
-       " 'QT_LINUX_ACCESSIBILITY_ALWAYS_ON',\n",
-       " 'CONDA_PROMPT_MODIFIER',\n",
-       " 'WINDOWID',\n",
-       " 'OLDPWD',\n",
-       " 'GTK_MODULES',\n",
-       " 'USER',\n",
-       " 'LS_COLORS',\n",
-       " 'QT_ACCESSIBILITY',\n",
-       " 'DESKTOP_AUTOSTART_ID',\n",
-       " 'XDG_SESSION_PATH',\n",
-       " 'XDG_SEAT_PATH',\n",
-       " 'SSH_AUTH_SOCK',\n",
-       " 'SESSION_MANAGER',\n",
-       " 'DEFAULTS_PATH',\n",
-       " 'XDG_CONFIG_DIRS',\n",
-       " 'PATH',\n",
-       " 'DESKTOP_SESSION',\n",
-       " 'QT_QPA_PLATFORMTHEME',\n",
-       " 'CONDA_PREFIX',\n",
-       " 'XDG_SESSION_TYPE',\n",
-       " 'PWD',\n",
-       " 'LANG',\n",
-       " 'GDM_LANG',\n",
-       " 'MANDATORY_PATH',\n",
-       " 'GDMSESSION',\n",
-       " 'XDG_SEAT',\n",
-       " 'HOME',\n",
-       " 'SHLVL',\n",
-       " 'LANGUAGE',\n",
-       " 'GNOME_DESKTOP_SESSION_ID',\n",
-       " 'GTK_OVERLAY_SCROLLING',\n",
-       " 'CONDA_PYTHON_EXE',\n",
-       " 'XDG_SESSION_DESKTOP',\n",
-       " 'LOGNAME',\n",
-       " 'XDG_DATA_DIRS',\n",
-       " 'DBUS_SESSION_BUS_ADDRESS',\n",
-       " 'CONDA_DEFAULT_ENV',\n",
-       " 'LESSOPEN',\n",
-       " 'XDG_RUNTIME_DIR',\n",
-       " 'DISPLAY',\n",
-       " 'XDG_CURRENT_DESKTOP',\n",
-       " 'LESSCLOSE',\n",
-       " 'XAUTHORITY',\n",
-       " '_',\n",
-       " 'JPY_PARENT_PID',\n",
-       " 'CLICOLOR',\n",
-       " 'PAGER',\n",
-       " 'GIT_PAGER',\n",
-       " 'MPLBACKEND']"
+       "{'QT': True, 'binder': False, 'jupyter': True, 'kubernetes': False}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(os.environ.keys())"
+    "def detect_environ():\n",
+    "    \"\"\"Check the runtime environment.\n",
+    "    \"\"\"\n",
+    "    envs = dict()\n",
+    "    kube = list(filter(lambda x: \"KUBE\" in x, os.environ.keys()))\n",
+    "    bind = list(filter(lambda x: \"BINDER\" in x, os.environ.keys()))\n",
+    "    jpy = list(filter(lambda x: \"JPY\" in x, os.environ.keys()))\n",
+    "    qt = list(filter(lambda x: \"QT\" in x, os.environ.keys()))\n",
+    "    envs[\"kubernetes\"] = bool(len(kube))\n",
+    "    envs[\"binder\"] = bool(len(bind))\n",
+    "    envs[\"jupyter\"] = bool(len(jpy))\n",
+    "    envs[\"QT\"] = bool(len(qt))\n",
+    "    return envs\n",
+    "\n",
+    "detect_environ()"
    ]
   },
   {
